# BrickGame

./: .gitattributes  README.md  requirements.md
src/: CMakeLists.txt  Doxyfile  Makefile
src/brick_game/: common_structure.h
src/brick_game/snake/: CMakeLists.txt  controller.cpp  controller.h  model.cpp  model.h  structure.h
src/brick_game/tetris/: backend.c  backend.h  controller.c  controller.h
src/gui/console/: frontend.c  frontend.h  main_snake.cpp  main_tetris.c
src/gui/desktop/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtfield.cpp  qtfield.h
src/gui/desktop/tetris/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/tests/: test_snake.cpp
